Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93652

qmllint: Missing support for inline components

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.0 Alpha
    • 6.2.0 Alpha
    • QML: Tooling
    • None
    • All
    • a991d3c1ec5b679f37ea19d7cbef576f3fc1029e (qt/qtdeclarative/dev) 3f7dab18b0eb992037c47a42fee8794528a6fb5a (qt/qtdeclarative/6.2)

      Currently inline components are not supported and cannot be referenced by other types without causing a false positive.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            max.goldstein Maximilian Goldstein
            max.goldstein Maximilian Goldstein
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes