tests/auto/qml/qmllint/data/bindingBeforeDeclaration.qml
@@ -1,0 +1,6 @@
+import QtQuick
+
+Item {
+    binding: QtObject {}
+    property QtObject binding
+}
