tests/auto/qml/qmllint/data/inlineComponentsChained.qml
@@ -1,0 +1,10 @@
+import QtQuick
+
+Item {
+  component A : B { required foo }
+  component B : C { property QtObject foo }
+  component C : Item {
+  }
+  A { foo: QtObject {} }
+}
+
